[HSP3Dish] getkey命令に対応(キー情報取得はWindowsのみ) ドキュメントの修正

--- a/package/win32/doclib/update.htm
+++ b/package/win32/doclib/update.htm
@@ -9,20 +9,21 @@
 	<meta name="keywords" content="HSP3,HotSoupProcessor3,更新情報,アップデート">
 	<meta name="description" content="HSPの更新情報を掲載">
 	<link href="../main.css" rel="stylesheet" type="text/css" media="all">
-	<title>HSP3.3 アップデートガイド</title>
+	<title>HSP3.31 アップデートガイド</title>
 </head>
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
 		<p id="COPY">HSP : Hot Soup Processor ver3.3 / onion software 1997-2011(c)</p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
-		<h1>HSP3.3 アップデートガイド</h1>
+		<h1>HSP3.31 アップデートガイド</h1>
 
 		<!-- 目次 -->
 		<ol>
 			<li><a href="#INTRO">イントロダクション</a></li>
-			<li><a href="#DIFF32">HSP3.3の変更点について</a></li>
+			<li><a href="#DIFF32">HSP3.31の変更点について</a></li>
 			<li><a href="#HSPDISH">新規ランタイム、HSP3Dishについて</a></li>
+			<li><a href="#HSP331UPDATE">HSP3.31のアップデートについて</a></li>
 			<li><a href="#DIFF2">HSP2との違いについて</a></li>
 			<li><a href="#SUMMARY">HSP3の概要</a>
 				<ol>
@@ -59,33 +60,38 @@
 		<!-- 本文 -->
 		<h2 id="INTRO">イントロダクション</h2>
 		<p>
-			HSP3.3は、HSP3.2に替わる新しいバージョンです。
+			HSP3.31は、HSP3.2及びHSP3.3に替わる新しいバージョンです。
 			大幅な仕様の変更はなく、あくまでも上位互換として動作する形で、各種機能が追加されています。
 		</p>
 		<p>
-			ここでは、HSP3.3とHSP3.2、HSP3.21の違いについて。
+			ここでは、HSP3.31とHSP3.2、HSP3.3の違いについて。
 			そして、HSP2.61とHSP3全般の違いについて解説していきます。
 		</p>
 
 
-		<h2 id="DIFF32">HSP3.3の変更点について</h2>
+		<h2 id="DIFF32">HSP3.31の変更点について</h2>
 		<p>
-			HSP3.3は、HSP3.2のマイナーアップデートバージョンです。
-			HSP3.2をすでに使っているユーザーは、特に意識することなくHSP3.3をお使いいただけるはずです。
+			HSP3.31は、HSP3.3のマイナーアップデートバージョンです。
+			HSP3.3をすでに使っているユーザーは、特に意識することなくHSP3.31をお使いいただけるはずです。
 		</p>
 		<p>
 			HSP3の詳細な更新履歴については、<a href="history.txt">こちら(history.txt)</a>を参照してください。
 		</p>
 		<p>
-			HSP3.3でHSP3.2から追加変更された主要な項目は以下の通りです。
+			HSP3.31でHSP3.2から追加変更された主要な項目は以下の通りです。
 		</p>
 		<p>
 		<UL>
+		<LI>自由に使用できる標準の素材がhsptvフォルダに追加されています
+		<LI>文字列の置換を行なう新規命令、strrepを追加しています
+		<LI>await命令による待ち時間の精度が向上しています
+		<LI>標準でPNG、TGA、PSDフォーマットの読み込みに対応しています
+		<LI>スマートフォン(iOS、android)に対応したHSP3Dishランタイムを同梱しています
+		<LI>HSP3Dish Helperを同梱し、androidデバイスへの変換をサポートします
+		<LI>HSPソースコンバーターによりCソースコードへの変換が可能です
 		<LI>HSPスクリプトエディタのエンジン(Footy2)を更新し、表示や操作面の改善を行ないました
 		<LI>未初期化の変数が使用されたことを検出する機能を追加しています
 		<LI>スクリプト実行速度を10～20%程度改善しています
-		<LI>スマートフォン開発を視野に入れた新しいHSP3Dishランタイムを同梱しています
-		<LI>HSPソースコンバーターを同梱し、Cソースコードへの変換が可能です
 		<LI>HGIMG3にある不具合のいくつかを修正しました
 		<LI>おちゃっこさん製作のEasy3Dプラグインを最新版に更新しました
 		<LI>powf関数がマクロから標準の実装に切り替えられ、より正確な値を返します
@@ -218,7 +224,6 @@
 		いくつかの特殊な機能が付加されています。
 		HSP3Dishに合わせたスクリプトを作成することで、iPhone/iPad、またはandroidといったスマートフォンなど
 		異なるシステム上での動作に繋げることが可能です。
-		(異なるプラットフォーム向けのライブラリは現在準備中で、今後提供される予定です)
 		</p>
 		<p>
 		特殊な利用を想定したHSP3DishですがWindows上で使用する上では、
@@ -228,8 +233,118 @@
 		新しいHSP3の流れとして今後も進化を続ける予定です。どうぞご期待ください。
 		</p>
 		<p>
-		HSP3Dishの詳細と使用方法については、<a href="hsp3dish.txt">マニュアル(hsp3dish.txt)</a>を参照してください。
+		HSP3Dishの詳細と使用方法については、<a href="hsp3dish_prog.htm">マニュアル(hsp3dish_prog.htm)</a>を参照してください。
 		</p>
+
+		<h2 id="HSP331UPDATE">HSP3.31のアップデートについて</h2>
+		<p>
+		HSP3.31は、HSP3.3からのマイナーアップデートになります。
+		特に変更を意識することなく、HSP3.3と同様にお使い頂けます。
+		HSP3.31で変更された項目の詳細は、以下の通りです。
+		</p>
+
+		<dl>
+			<dt>
+			読み込み可能画像フォーマットの追加について
+			</dt><br>
+			<dd>
+			<p>
+			標準で、PNG、TGA、PSD形式の画像を読み込むことが可能になりました。
+			(コンパクト版(hsp3c)ランタイムを除く)
+			</p>
+			<PRE>
+		PNG形式  : 拡張子 PNG : Portable Network Graphicsデータ。
+		PSD形式  : 拡張子 PSD : Photoshop形式のデータ。(合成レイヤーのみ)
+		TGA形式  : 拡張子 TGA : TARGA 形式のデータ。
+		※従来通りのBMP、GIF、JPG、ICO形式もサポートされます。</PRE>
+			<p>
+			ただし、インターレース形式のPNGファイルには標準では対応していません。PNGがサポートするすべての形式を読み込む場合は、imgloadまたはhspcvプラグインをご使用下さい。
+			</p>
+			<p>
+			PNG、TGA、PSD形式で透明色(アルファチャンネル)を含む画像を
+			picload命令で読み込む場合、画像のアルファチャンネルが適用されます。
+			picload命令のモード1(現在の画面の上にロード)で読み込んだ場合、
+			アルファチャンネルを適用した状態で合成されることになります。
+			モード0(画面を初期化してロード)の場合は、通常通り白色の背景で
+			画面を初期化した上で、読み込みを行ないます。
+			HSP3.31では、新しくモード2(黒色で画面を初期化してロード)が追加
+			されています。これは、黒色の背景で画面を初期化した上で、
+			読み込みを行ないます。これにより、透明部分が黒色になりgcopy命令等で
+			黒色を透明としてコピーする場合に有効です。
+			また、celload命令での画像読み込み時は、常にモード2と同様に
+			黒色の背景で画面を初期化して読み込みを行なう動作となっています。
+			</p>
+			</dd>
+
+			<dt>
+			await命令の精度について
+			</dt><br>
+			<dd>
+			<p>
+			HSP3.31では、await命令の待ち時間精度を向上させています。
+			これにより、従来よりも一定で高精度な時間待ちを実現できます。
+			ただし、従来のスクリプトと待ち時間のタイミングが微妙に変わる
+			可能性がありますのでご注意ください。
+			</p>
+			</dd>
+
+			<dt>
+			新規命令、strrepについて
+			</dt><br>
+			<dd>
+			<p>
+			新規の文字列操作命令として、文字列の置換を行なうstrrep命令が
+			新たに追加されています。
+			</p>
+			<PRE>
+		strrep p1,"検索文字列","置換文字列"
+
+		p1=変数名 : 検索される文字列が格納されている文字列型変数名
+		"検索文字列" : 検索する文字列
+		"置換文字列" : 置換する文字列</PRE>
+			<p>
+			p1で指定した文字列型変数の内容すべてにおいて、
+			"検索文字列"で指定した文字列を、"置換文字列"に置き換えます。
+			実行後、システム変数statに文字列を置換した回数が代入されます。
+			</p>
+			</dd>
+
+			<dt>
+			HSPTVフォルダ素材について
+			</dt><br>
+			<dd>
+			<p>
+			HSP3.31では、自由に使用できる素材として、HSPTVフォルダ素材に
+			サウンド(.wav、.mid)、画像(.jpg、.bmp、.png)を同梱しています。
+			これらの素材は、ユーザーがソフトを作成する際に自由に使用・配布
+			することができます。(著作権表記をする場合は、ドキュメントに
+			「HSP3.31付属のフリー素材データを使用」のようにお書き下さい。
+			ただし、データを使用しても著作権表記を行なう義務はありません。)
+			<br><br>
+			スクリプトから素材データを呼び出す際には、dir_tvマクロを
+			使用すると便利です。
+			</p>
+			<PRE>
+		picload dir_tv+"sozai1.jpg"</PRE>
+			<p>
+			のように記述することで、HSPTVフォルダから指定されたファイル名を
+			検索することになります。
+			素材のデータを含むexe(実行)ファイルを作成する場合は、
+			</p>
+			<PRE>
+		#pack "sozai1.jpg"</PRE>
+			<p>
+			のように#pack命令に素材のファイル名を直接指定してください。
+			(#epack命令も同様です)
+			#pack、#epack命令では、スクリプトのあるフォルダ及びHSPTVフォルダ
+			から該当するファイルを検索し、exe(実行)ファイルを作成します。
+			</p>
+			<p>
+			素材データの一覧については、<a href="hsptv_res.htm">HSPTVフォルダ素材一覧(hsptv_res.htm)</a>を参照してください。
+			</p>
+			</dd>
+
+		</dl>
 
 		<h2 id="DIFF2">HSP2との違いについて</h2>
 		<p>
