--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -31,9 +31,13 @@
 			<li><a href="doclib/peas.htm">peasエディタ マニュアル（peas.htm）</a></li>
 			<li><a href="doclib/HSP Document Library/hdl_usage.htm">HDL(HSP Document Library) の使い方（hdl_usage.htm）</a></li>
 			<li><a href="doclib/hsptv.htm">HSPTVブラウザ マニュアル（hsptv.htm）</a></li>
-			<li>HSP3Dish
+			<li><a href="doclib/hsptv_res.htm">HSPTVフォルダ素材一覧（hsptv_res.htm）</a></li>
+	    	        <li><a href="hsp3dish.htm">HSP3Dish</a>
 				<ul>
 				<li><a href="doclib/hsp3dish_prog.htm">プログラミングマニュアル・基本仕様ガイド（hsp3dish_prog.htm）</a></li>
+					<ul>
+						<li><a href="doclib/support_cmds.txt">HSP3Dishコマンドリスト（support_cmds.txt）</a></li>
+					</ul>
 				<li><a href="doclib/hsp3dish_ios.htm">iOS版プログラミングガイド（hsp3dish_ios.htm）</a></li>
 				<li><a href="doclib/hsp3dish_ndk.htm">android(NDK)版プログラミングガイド（hsp3dish_ndk.htm）</a></li>
 				</ul>
