さらに修正

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.3 / onion software 1997-2011(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.31 / onion software 1997-2012(c)</p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
 		<h1>HSP3 概要</h1>
 
@@ -81,7 +81,7 @@
 			<li>Microsoft Windows 2000、XP ( NT4.0以降を含む )、Vista、7</li>
 		</ul>
 		<p>
-			HSP3.3は32bitアプリケーションの動作するほぼすべてのWindowsで動作します。
+			HSP3.31は32bitアプリケーションの動作するほぼすべてのWindowsで動作します。
 		</p>
 		<pre>
 	Windows 98及びMe上では、標準の「HSPスクリプトエディタ」は動作致しません。
@@ -103,7 +103,7 @@
 
 		<h2 id="PACKAGE">パッケージ構成</h2>
 		<p>
-			HSP3.3フルセットは、オープンソースとして公開されているOpenHSP技術をベースに、
+			HSP3.31フルセットは、オープンソースとして公開されているOpenHSP技術をベースに、
 			Windows上で手軽にプログラミングを楽しむことができるよう構成されています。
 			スクリプトを記述するための「HSPスクリプトエディタ」を始めとして、
 			視覚的にプログラムの動作を確認することができるツール「Peas」、
@@ -113,19 +113,19 @@
 
 		<h2 id="INSTALL">インストール</h2>
 		<p>
-			HSP3.3フルセットは、インストーラー付きのバージョンと圧縮ファイル版が用意されています。
-			インストーラーを起動するか、または任意のディレクトリにhsp33フォルダを解凍する
-			ことで使用できるようになります。(推奨ディレクトリは、「c:\hsp33」です)
+			HSP3.31フルセットは、インストーラー付きのバージョンと圧縮ファイル版が用意されています。
+			インストーラーを起動するか、または任意のディレクトリにhsp331フォルダを解凍する
+			ことで使用できるようになります。(推奨ディレクトリは、「c:\hsp331」です)
 		</p>
 		<p>
-			HSP3.3以前のバージョンが既にインストールされている場合は、以前のものをアンインストール
+			HSP3.31以前のバージョンが既にインストールされている場合は、以前のものをアンインストール
 			してから、新しいバージョンをインストールすることを推奨します。
-			ただし、HSP3.3のインストーラーは、インストール先のフォルダ以外にファイルの追加を行ないませんので、
+			ただし、HSP3.31のインストーラーは、インストール先のフォルダ以外にファイルの追加を行ないませんので、
 			以前のバージョンと競合することはありません。(過去のバージョンと同時に利用することも可能です。)
 		</p>
 		<p>
-			Windows 2000以降(XP、Vista、7等)では、HSP3.3のインストールフォルダに書き込み権限が必要になります。
-			インストーラーのデフォルトディレクトリ(/HSP33)にインストールを行なった場合なども、
+			Windows 2000以降(XP、Vista、7等)では、HSP3.31のインストールフォルダに書き込み権限が必要になります。
+			インストーラーのデフォルトディレクトリ(/HSP331)にインストールを行なった場合なども、
 			管理者権限を持ったユーザーで実行するようにしてください。
 		</p>
 		<p>
@@ -158,7 +158,7 @@
 
 		<h2 id="DEMO">デモンストレーション</h2>
 		<p>
-			まず、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.3」→「サンプルデモ」
+			まず、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.31」→「サンプルデモ」
 			を起動させてみてください。HSPのサンプルデモが始まります。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、HSP3DEMO.EXEを起動させてみてください。）
 		</p>
@@ -167,7 +167,7 @@
 			色々なデモンストレーションを見ることができます。
 		</p>
 		<p>
-			また、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.3」→「HSPアシスタント」
+			また、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.31」→「HSPアシスタント」
 			を選択することで。HSPサンプルスクリプトを閲覧するための「HSPアシスタント」が起動します。
 			「HSPアシスタント」で、「Sample」のボタンを押してからファイルを選択するだけで、
 			すぐに実行・閲覧することができます。
@@ -175,8 +175,8 @@
 
 		<h2 id="CHANGE31">HSP3.2からの変更点</h2>
 		<p>
-			HSP3.3では、上位互換となる形で機能の修正と追加を行なっています。
-			HSP3.2で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.3で動作させることができます。
+			HSP3.31では、上位互換となる形で機能の修正と追加を行なっています。
+			HSP3.2で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.31で動作させることができます。
 			詳しくは、<a href="update.htm">アップデートガイド</a>を参照してください。
 		</p>
 
@@ -212,7 +212,7 @@
 			HSPアシスタントにより、命令の検索、サンプルスクリプトの参照、ネットワーク素材取得などを行なうことができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.3」→「HSPアシスタント」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.31」→「HSPアシスタント」
 			を選択することで、HSPアシスタントが起動されます。
 			(メニュー登録されていない場合は、展開されたディレクトリにある、HSPAT.EXEを起動させてみてください。)
 		</p>
@@ -227,7 +227,7 @@
 			ダウンロードして楽しむことができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.3」→「HSPTVブラウザ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.31」→「HSPTVブラウザ」
 			を選択することで、HSPTVブラウザが起動されます。
 			(メニュー登録されていない場合は、展開されたディレクトリにある、HSPTV.EXEを起動させてみてください。)
 		</p>
@@ -246,7 +246,7 @@
 			スクリプトを自動的に生成することができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.3」→「Peasエディタ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.31」→「Peasエディタ」
 			を選択することで、Peasエディタが起動されます。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、AHTMAN.EXEを起動させてみてください。）
 		</p>
@@ -263,7 +263,7 @@
 			統合的な検索とシームレスなリンクが行なわれ、スクリプトの開発効率を高めます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.3」→「ドキュメントブラウザ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.31」→「ドキュメントブラウザ」
 			を選択することで起動されます。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、HDL.EXEを起動させてください。）
 		</p>
@@ -362,7 +362,7 @@
 
 		<h2 id="COPYRIGHT">著作権、ライセンスについて</h2>
 		<p>
-			HSP3.3フルセットは、「HSP開発システム」と「追加コンポーネント」で構成された複合パッケージとなっています。
+			HSP3.31フルセットは、「HSP開発システム」と「追加コンポーネント」で構成された複合パッケージとなっています。
 			HSP開発システムは、開発の中心となる要素で以下の項目を指します。
 		</p>
 		<ul>
@@ -617,7 +617,7 @@
 			<dt>ちょくと さん</dt>
 			<dd>
 				<p>
-		<a href="http://yokohama.cool.ne.jp/chokuto/">http://yokohama.cool.ne.jp/chokuto/</a>
+		<a href="http://chokuto.ifdef.jp/">http://chokuto.ifdef.jp/</a>
 				</p>
 			</dd>
 			<dt>S.Programs NET (S.Programsさん)</dt>
@@ -653,7 +653,7 @@
 			<dt>おちゃっこさん</dt>
 			<dd>
 				<p>
-		<a href="http://www5d.biglobe.ne.jp/~ochikko/">http://www5d.biglobe.ne.jp/~ochikko/</a>
+		<a href="http://ochakkolab.moo.jp/">http://ochakkolab.moo.jp/</a>
 				</p>
 			</dd>
 			<dt>山田 雄己(Yuki)さん</dt>
