ドキュメントを修正

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -85,7 +85,7 @@
 		</p>
 		<pre>
 	Windows 98及びMe上では、標準の「HSPスクリプトエディタ」は動作致しません。
-	HSP3.2までのエディタを使用するか、簡易版エディタ(hsed3le.exe)をご使用ください。
+	HSP3.2版のエディタ(hsed3f1.exe)を使用するか、簡易版エディタ(hsed3le.exe)をご使用ください。
 	また、InternetExplorer4.0以降がインストールされているWindows 95上でも動作可能ですが、保証外となります。
 		</pre>
 		<p>
