--- a/package/win32/doclib/update.htm
+++ b/package/win32/doclib/update.htm
@@ -118,9 +118,8 @@
 <li>Footy2ライブラリの制約により、<b>Windows2000より前のOS(Windows 95/98/Me)は、動作対象外となります</b><br>
 これは、エディタの動作に関する制約であり、HSP3自体はWindows 98以降で使用することができます。
 <br>
-	これらのOSをご利用のユーザーには大変不自由をお掛けしますが、同梱されているシンプルなエディタ(hsed3le.exe)か、またはHSP3.21までに同梱されていた以前のエンジン(Footy1)によるエディタを
-	別途コピーしてお使い頂くことを推奨致します。
-	Windows 2000以降のOS(Windows XP,Vista,7)環境であれば、特に問題なく使用することができます。
+	これらのOSをご利用のユーザーには大変不自由をお掛けしますが、同梱されているシンプルなエディタ(hsed3le.exe)か、またはHSP3.21まで使用していたFooty1版のエディタ(hsed3f1.exe)をお使い頂くことを推奨致します。
+	Windows 2000以降のOS(Windows XP,Vista,7)環境であれば、新しいエディタは特に問題なく使用することができます。
 <br>
 <li>オートインデント利用時の空行はTAB1がつ含まれた行となります<br>
 以前のスクリプトエディタでは、ただの空行とされていました。今後のバージョンでは、以前のエディタに近い動作に修正していきたいと考えています。
@@ -139,7 +138,12 @@
 </pre>
 	尚、設定項目の変更があるため、HSP3.3より前のスクリプトエディタと
 	設定の記録先を変更しています。いままでの設定は引き継がれませんのでご注意ください。
-				</p>
+<br>
+<br>
+	以前のエディタとの動作の違いや、新しいエディタの動作が不安定などの理由で、
+	HSP3.21まで使用していたFooty1版のエディタを使用したい方は、HSPインストールディレクトリにあるhsed3f1.exeをお使い頂くことができます。<br>
+	その場合は、hsed3f1.exeをリネームするか、関連付け先を変更してご使用ください。
+			</p>
 			</dd>
 			<dt>
 			powfの標準数学関数置き換えについて
