--- a/trunk/package/win32/doclib/hsp3dish_ios.htm
+++ b/trunk/package/win32/doclib/hsp3dish_ios.htm
@@ -406,7 +406,7 @@
 	celload、picload命令などで読み込まれる画像は、以下のフォーマットが使用できます。iOSでは、PNG形式が推奨されます。
 	<ul>
 	<li>JPEG baseline (プログレッシブJPEGは非サポート)</li>
-	<li>PNG (8-bit形式のみ)</li>
+	<li>PNG (8bit、24bit、24bit+アルファチャンネル形式に対応)</li>
 	<li>TGA (サブセット)</li>
 	<li>BMP (白黒、REL圧縮は非サポート)</li>
 	<li>PSD (RGB24bitのみ読み出し)</li>
