--- a/trunk/package/win32/doclib/hsp3dish_ios.htm
+++ b/trunk/package/win32/doclib/hsp3dish_ios.htm
@@ -408,7 +408,7 @@
 	<li>JPEG baseline (プログレッシブJPEGは非サポート)</li>
 	<li>PNG (8bit、24bit、24bit+アルファチャンネル形式に対応)</li>
 	<li>TGA (サブセット)</li>
-	<li>BMP (白黒、REL圧縮は非サポート)</li>
+	<li>BMP (白黒、RLE圧縮は非サポート)</li>
 	<li>PSD (RGB24bitのみ読み出し)</li>
 	<li>GIF</li>
 	<li>HDR (radiance rgbE format)</li>
