--- a/trunk/package/win32/doclib/hsp3dish_ndk.htm
+++ b/trunk/package/win32/doclib/hsp3dish_ndk.htm
@@ -301,6 +301,14 @@
 	<p>
 	スケーリングの設定は、起動時に行なわれます。スクリプト実行中に変更することはできません。
 	</p>
+	<ul><pre>
+		hgio_uvfix( 1 );
+	</pre></ul>
+	<p>
+	テクスチャを拡大した際に、隣のピクセルがブレンドされてしまう現象を補正します。
+	通常はこのオプションを指定する必要はありませんが、画面のスケーリング等で正しくテクスチャが表示されない場合に試してみてください。<br>
+	カッコ内の数値が0以外の場合は補正がONになります。0の場合は補正がOFFになります。
+	</p>
 
 	<h2 id="RELEASE">リリースビルド</h2>
 	<p>
@@ -387,7 +395,7 @@
 	<li>JPEG baseline (プログレッシブJPEGは非サポート)</li>
 	<li>PNG (8bit、24bit、24bit+アルファチャンネル形式に対応)</li>
 	<li>TGA (サブセット)</li>
-	<li>BMP (白黒、REL圧縮は非サポート)</li>
+	<li>BMP (白黒、RLE圧縮は非サポート)</li>
 	<li>PSD (RGB24bitのみ読み出し)</li>
 	<li>GIF</li>
 	<li>HDR (radiance rgbE format)</li>
