ドキュメントの更新

--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -154,6 +154,13 @@
 	</p>
 	</ul>
 
+	<li>実数演算の精度</li>
+	<p>
+	実数(浮動小数点演算)の精度が、HSP3Dishでは単精度(32bit)扱いとなります。
+	これは、デバイスの演算能力や実行速度などを考慮したもので、標準のHSP実数(64bit)よりも低い精度になることを考慮しておいてください。通常の使用上は特に問題のない範囲だと考えられます。
+	</p>
+	</ul>
+
 	<h2 id="BUTTON">button命令について</h2>
 	<p>
 	現在サポートされている配置オブジェクトは、button命令によるボタンのみとなっています。
