--- a/trunk/package/win32/doclib/hsp3dish_prog.htm
+++ b/trunk/package/win32/doclib/hsp3dish_prog.htm
@@ -152,12 +152,16 @@
 	Windows版では、効果音にwav、BGM(サウンド)にmidまたはmp3を使用することが可能ですが、
 	プラットフォームごとにサポートする形式が変更される可能性があります。
 	</p>
-	</ul>
 
 	<li>実数演算の精度</li>
 	<p>
 	実数(浮動小数点演算)の精度が、HSP3Dishでは単精度(32bit)扱いとなります。
 	これは、デバイスの演算能力や実行速度などを考慮したもので、標準のHSP実数(64bit)よりも低い精度になることを考慮しておいてください。通常の使用上は特に問題のない範囲だと考えられます。
+	</p>
+
+	<li>celput命令の表示倍率</li>
+	<p>
+	celput命令でX,Y方向の表示倍率にマイナス値が指定された場合の挙動は、HSP3Dishの環境下では保証されません。今後のバージョンでは標準HSP3の動作と統一される予定です。
 	</p>
 	</ul>
 
