--- a/trunk/package/win32/doclib/hsp3.htm
+++ b/trunk/package/win32/doclib/hsp3.htm
@@ -607,6 +607,9 @@
 			HSP3ユーティリティマクロ(hsp3util.as)は、HSPWiKi及び、ぷまさんが作成したものを同梱させて頂きました。
 		</p>
 		<p>
+			arueさんにHGIMG3、及びドキュメントについて助言を頂きました。また、HSP3スクリプト用アイコン(hspscr_icon)を作成して頂きました。
+		</p>
+		<p>
 			OpenHSPで多くの修正及び助言を頂いた皆様、特にfujidigさん、Shark++さん、naznyarkさんに感謝致します。
 		</p>
 		<p>
@@ -678,6 +681,12 @@
 			<dd>
 				<p>
 		<a href="http://www.binzume.net/">http://www.binzume.net/</a>
+				</p>
+			</dd>
+			<dt>Crystal light stage (arueさん)</dt>
+			<dd>
+				<p>
+		<a href="http://hp.vector.co.jp/authors/VA029904/">http://hp.vector.co.jp/authors/VA029904/</a>
 				</p>
 			</dd>
 		</dl>
