[HSP3Dish][iOS] Retinaディスプレイ対応のためのオプションを追加

--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -170,11 +170,13 @@
 	</p>
 	<ul>
 	<li>ソーススクリプト</li><br><p>
-	実行するためのHSPスクリプト(.hsp)を指定します。必ずHSP3Dish用に記述されたスクリプトでなければなりません。「参照」ボタンを押すことで、ファイル選択ダイアログを開くことができます。
+	実行するためのHSPスクリプト(.hsp)を指定します。必ずHSP3Dish用に記述されたスクリプトでなければなりません。「参照」ボタンを押すことで、ファイル選択ダイアログを開くことができます。<br>
+	この項目を空欄にした場合は、プロジェクトフォルダ以下の「hspフォルダ」内にある.hspファイルを対象のスクリプトとします。「hspフォルダ」が存在しない場合は、ソーススクリプトの変換は行なわれません。
 	</p>
 	<li>データファイル(dpm)</li><br><p>
-	スクリプトから参照されるデータが格納されているdpmファイルを指定します。dpmファイルは、HSPで使用している形式で、複数のファイルが1つのdpmファイルにパックされています。「作成...」ボタンを押すことで、指定したフォルダ内にあるすべてのファイルをdata.dpmというファイルにパックして、そのファイルを指定することができます。
-	データファイルの指定が空欄の場合は、データのないスクリプトとして処理されます。
+	スクリプトから参照されるデータが格納されているdpmファイルを指定します。dpmファイルは、HSPで使用している形式で、複数のファイルが1つのdpmファイルにパックされています。(「作成...」ボタンを押すことで、指定したフォルダ内にあるすべてのファイルをdata.dpmというファイルにパックして、そのファイルを指定することができます。)
+	データファイルの指定が空欄の場合は、dpmファイルの参照はされません。
+	詳しくは、<a href="#DATAFILE">データファイルの準備</a>を参照してください。
 	</p>
 	<li>プロジェクト名</li><br><p>
 	ビルドの対象となるプロジェクトを選択します。プロジェクトのフォルダが作成されて、ビルドの準備が整っているものの中から、1つを選択することができます。
