--- a/package/win32/doclib/hsp3dish_ios.htm
+++ b/package/win32/doclib/hsp3dish_ios.htm
@@ -32,6 +32,7 @@
 		<li><a href="#EXECURL">exec命令のサポートについて</a></li>
 		<li><a href="#SENSOR">加速度センサーのサポートについて</a></li>
 		<li><a href="#DIALOG">dialog命令のサポートについて</a></li>
+		<li><a href="#RETINA">Retinaディスプレイ対応について</a></li>
 		<li><a href="#RELEASE">AppStoreへの登録について</a></li>
 		<li><a href="#NOTICE">iOS版の注意事項、制限</a></li>
 		<li><a href="#NEWVER">iOS版の更新予定</a></li>
@@ -120,6 +121,12 @@
 	デフォルトで、Deployment Target(対応OSのバージョン)が5.0に設定されているので、
 	幅広いターゲットでも動作するよう、OS4.3以降に下げておくことを推奨します。
 	</p>
+	<img src="hsp3dish/s_xcode45.jpg"><br>
+	<p>
+	XCodeのバージョン4.5以降では、コンパイラの設定を変更する必要があります。<br>
+	プロジェクトのBuild Settingsの中にある、Apple LLVM compiler 4.1 - Language内のオプション、「C++ Language Dialect」「C++ Standard Library」をともに「Compiler Default」に変更してください。<br>
+	以前のXCodeで作成されたプロジェクトファイルは問題なく読み込みビルドすることが可能です。
+	</p>
 
 	<h2 id="ADDHSP">HSP3Dish関連ファイルの登録</h2>
 	<p>
@@ -176,7 +183,7 @@
 	<h2 id="RUNPROJ">HSP3Dishの実行と設定</h2>
 	<p>
 	実際にHSP3Dishを実行させる場合は、HSPランタイムの初期化コードをAppDelegateに組み込む必要があります。
-	プロジェクトの作成時に自動的に生成される、AppDelegate.mファイルをエディタで開き編集するか、またはiOSフォルダのサンプルに含まれているAppDelegate.mファイルを上書きコピーしてご使用下さい。
+	プロジェクトの作成時に自動的に生成される、AppDelegate.mファイルをエディタで開き編集するか、またはiOSフォルダに含まれているAppDelegate.mファイルを上書きコピーしてご使用下さい。
 	</p>
 	<img src="hsp3dish/s_code2.jpg"><br>
 	<br>
@@ -258,6 +265,14 @@
 	これは、それぞれの座標軸の加速度を-1.0～+1.0の範囲で取得したものになります。<br>
 	加速度センサーを使用しない場合は、この設定を追加しないでください。センサー情報の取得により、余計なバッテリーを消費してしまいます。
 	Windows上など加速度センサーが使用できない環境では、0.0が取得されます。
+	</p>
+
+	<pre>
+	    [view useRetina];
+	</pre>
+	<p>
+	この設定により、Retinaディスプレイ搭載機種(iPhone4以降)では、解像度を倍にして処理することができます。
+	Retinaディスプレイを搭載していない機種では、通常通りの解像度を維持します。
 	</p>
 
 	<pre>
@@ -365,6 +380,26 @@
 	<p>
 	iOS版では、加速度センサーをサポートしています。AppDelegate.mに必要な初期化を追加する必要があります。詳しくは、<a href="#RUNPROJ">HSP3Dishの実行と設定</a>をご覧ください。<br>
 	現在は、Windows版では加速度センサーと同様の値を読み取ることができないため、実行中のランタイムに応じて、テストを行なうコードを作成してテストを行なうようにしてください。
+	</p>
+
+	<h2 id="RETINA">Retinaディスプレイ対応について</h2>
+	<p>
+	AppDelegate.mに必要な初期化を追加することでRetinaディスプレイに対応させることができます。<br>
+	あらかじめ、640×960の高精細なサイズでアプリの作成を行なった上で、以下のように初期化を行なってください。
+	</p>
+	<pre>
+	    //ビューの生成と追加
+	    HspView* view=[[HspView alloc] initWithFrame:CGRectMake(0,0,320,480)];
+	    [view useRetina];
+	    [view startFrame:60];
+	    [view clsMode:1 color:0xffffff];
+	    [view dispViewX:640 Y:960];
+	    [view dispAutoScale:0];
+	    [self.window addSubview:view];
+	    [view release];
+	</pre>
+	<p>
+	この設定により、Retinaディスプレイ搭載機種で正しく反映され、Retinaディスプレイでない機種では縮小サイズ(320×480)で表示されるようになります。
 	</p>
 
 	<h2 id="RELEASE">AppStoreへの登録について</h2>
