終了処理の一部変更 HSP3.32向けのドキュメント修正

--- a/package/win32/doclib/hsp3.htm
+++ b/package/win32/doclib/hsp3.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.31 / onion software 1997-2012(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.31 / onion software 1997-2013(c)</p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
 		<h1>HSP3 概要</h1>
 
@@ -78,10 +78,10 @@
 		<h2 id="DOUSA_ENV">動作環境</h2>
 		<ul>
 			<li>Microsoft Windows 98 / Me</li>
-			<li>Microsoft Windows 2000、XP ( NT4.0以降を含む )、Vista、7</li>
+			<li>Microsoft Windows 2000、XP ( NT4.0以降を含む )、Vista、7、8</li>
 		</ul>
 		<p>
-			HSP3.31は32bitアプリケーションの動作するほぼすべてのWindowsで動作します。
+			HSP3.32は32bitアプリケーションの動作するほぼすべてのWindowsで動作します。
 		</p>
 		<pre>
 	Windows 98及びMe上では、標準の「HSPスクリプトエディタ」は動作致しません。
@@ -89,7 +89,7 @@
 	また、InternetExplorer4.0以降がインストールされているWindows 95上でも動作可能ですが、保証外となります。
 		</pre>
 		<p>
-			Windows 7及びVistaの64bit(x64)版での動作を確認しています。
+			Windows 7、8及びVistaの64bit(x64)版での動作を確認しています。
 		</p>
 		<p>
 			640×480以上の解像度と、256色以上の表示が可能なディスプレイが必要
@@ -103,7 +103,7 @@
 
 		<h2 id="PACKAGE">パッケージ構成</h2>
 		<p>
-			HSP3.31フルセットは、オープンソースとして公開されているOpenHSP技術をベースに、
+			HSP3.32フルセットは、オープンソースとして公開されているOpenHSP技術をベースに、
 			Windows上で手軽にプログラミングを楽しむことができるよう構成されています。
 			スクリプトを記述するための「HSPスクリプトエディタ」を始めとして、
 			視覚的にプログラムの動作を確認することができるツール「Peas」、
@@ -113,23 +113,23 @@
 
 		<h2 id="INSTALL">インストール</h2>
 		<p>
-			HSP3.31フルセットは、インストーラー付きのバージョンと圧縮ファイル版が用意されています。
-			インストーラーを起動するか、または任意のディレクトリにhsp331フォルダを解凍する
-			ことで使用できるようになります。(推奨ディレクトリは、「c:\hsp331」です)
+			HSP3.32フルセットは、インストーラー付きのバージョンと圧縮ファイル版が用意されています。
+			インストーラーを起動するか、または任意のディレクトリにhsp332フォルダを解凍する
+			ことで使用できるようになります。(推奨ディレクトリは、「c:\hsp332」です)
 		</p>
 		<p>
-			HSP3.31以前のバージョンが既にインストールされている場合は、以前のものをアンインストール
+			HSP3.32以前のバージョンが既にインストールされている場合は、以前のものをアンインストール
 			してから、新しいバージョンをインストールすることを推奨します。
-			ただし、HSP3.31のインストーラーは、インストール先のフォルダ以外にファイルの追加を行ないませんので、
+			ただし、HSP3.32のインストーラーは、インストール先のフォルダ以外にファイルの追加を行ないませんので、
 			以前のバージョンと競合することはありません。(過去のバージョンと同時に利用することも可能です。)
 		</p>
 		<p>
-			Windows 2000以降(XP、Vista、7等)では、HSP3.31のインストールフォルダに書き込み権限が必要になります。
-			インストーラーのデフォルトディレクトリ(/HSP331)にインストールを行なった場合なども、
+			Windows 2000以降(XP、Vista、7、8等)では、HSP3.32のインストールフォルダに書き込み権限が必要になります。
+			インストーラーのデフォルトディレクトリ(/HSP332)にインストールを行なった場合なども、
 			管理者権限を持ったユーザーで実行するようにしてください。
 		</p>
 		<p>
-			Windows Vistaをお使いの方は、User Account Control (UAC) の機能により、
+			Windows Vista以降をお使いの方は、User Account Control (UAC) の機能により、
 			インストールの際に管理者権限を要求されることがあります。
 			この時は、管理者権限で処理を続行して頂くようお願い致します。
 		</p>
@@ -158,7 +158,7 @@
 
 		<h2 id="DEMO">デモンストレーション</h2>
 		<p>
-			まず、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.31」→「サンプルデモ」
+			まず、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.32」→「サンプルデモ」
 			を起動させてみてください。HSPのサンプルデモが始まります。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、HSP3DEMO.EXEを起動させてみてください。）
 		</p>
@@ -167,7 +167,7 @@
 			色々なデモンストレーションを見ることができます。
 		</p>
 		<p>
-			また、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.31」→「HSPアシスタント」
+			また、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.32」→「HSPアシスタント」
 			を選択することで。HSPサンプルスクリプトを閲覧するための「HSPアシスタント」が起動します。
 			「HSPアシスタント」で、「Sample」のボタンを押してからファイルを選択するだけで、
 			すぐに実行・閲覧することができます。
@@ -175,8 +175,8 @@
 
 		<h2 id="CHANGE31">HSP3.2からの変更点</h2>
 		<p>
-			HSP3.31では、上位互換となる形で機能の修正と追加を行なっています。
-			HSP3.2で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.31で動作させることができます。
+			HSP3.32では、上位互換となる形で機能の修正と追加を行なっています。
+			HSP3.2で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.32で動作させることができます。
 			詳しくは、<a href="update.htm">アップデートガイド</a>を参照してください。
 		</p>
 
@@ -212,7 +212,7 @@
 			HSPアシスタントにより、命令の検索、サンプルスクリプトの参照、ネットワーク素材取得などを行なうことができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.31」→「HSPアシスタント」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.32」→「HSPアシスタント」
 			を選択することで、HSPアシスタントが起動されます。
 			(メニュー登録されていない場合は、展開されたディレクトリにある、HSPAT.EXEを起動させてみてください。)
 		</p>
@@ -227,7 +227,7 @@
 			ダウンロードして楽しむことができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.31」→「HSPTVブラウザ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.32」→「HSPTVブラウザ」
 			を選択することで、HSPTVブラウザが起動されます。
 			(メニュー登録されていない場合は、展開されたディレクトリにある、HSPTV.EXEを起動させてみてください。)
 		</p>
@@ -246,7 +246,7 @@
 			スクリプトを自動的に生成することができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.31」→「Peasエディタ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.32」→「Peasエディタ」
 			を選択することで、Peasエディタが起動されます。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、AHTMAN.EXEを起動させてみてください。）
 		</p>
@@ -263,7 +263,7 @@
 			統合的な検索とシームレスなリンクが行なわれ、スクリプトの開発効率を高めます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.31」→「ドキュメントブラウザ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.32」→「ドキュメントブラウザ」
 			を選択することで起動されます。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、HDL.EXEを起動させてください。）
 		</p>
@@ -362,7 +362,7 @@
 
 		<h2 id="COPYRIGHT">著作権、ライセンスについて</h2>
 		<p>
-			HSP3.31フルセットは、「HSP開発システム」と「追加コンポーネント」で構成された複合パッケージとなっています。
+			HSP3.32フルセットは、「HSP開発システム」と「追加コンポーネント」で構成された複合パッケージとなっています。
 			HSP開発システムは、開発の中心となる要素で以下の項目を指します。
 		</p>
 		<ul>
