--- a/package/win32/doclib/update.htm
+++ b/package/win32/doclib/update.htm
@@ -9,21 +9,21 @@
 	<meta name="keywords" content="HSP3,HotSoupProcessor3,更新情報,アップデート">
 	<meta name="description" content="HSPの更新情報を掲載">
 	<link href="../main.css" rel="stylesheet" type="text/css" media="all">
-	<title>HSP3.31 アップデートガイド</title>
+	<title>HSP3.32 アップデートガイド</title>
 </head>
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.3 / onion software 1997-2011(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.3 / onion software 1997-2013(c)</p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
-		<h1>HSP3.31 アップデートガイド</h1>
+		<h1>HSP3.32 アップデートガイド</h1>
 
 		<!-- 目次 -->
 		<ol>
 			<li><a href="#INTRO">イントロダクション</a></li>
-			<li><a href="#DIFF32">HSP3.31の変更点について</a></li>
+			<li><a href="#DIFF32">HSP3.32の変更点について</a></li>
 			<li><a href="#HSPDISH">新規ランタイム、HSP3Dishについて</a></li>
-			<li><a href="#HSP331UPDATE">HSP3.31のアップデートについて</a></li>
+			<li><a href="#HSP332UPDATE">HSP3.32のアップデートについて</a></li>
 			<li><a href="#DIFF2">HSP2との違いについて</a></li>
 			<li><a href="#SUMMARY">HSP3の概要</a>
 				<ol>
@@ -60,25 +60,25 @@
 		<!-- 本文 -->
 		<h2 id="INTRO">イントロダクション</h2>
 		<p>
-			HSP3.31は、HSP3.2及びHSP3.3に替わる新しいバージョンです。
+			HSP3.32は、HSP3.3及びHSP3.31に替わる新しいバージョンです。
 			大幅な仕様の変更はなく、あくまでも上位互換として動作する形で、各種機能が追加されています。
 		</p>
 		<p>
-			ここでは、HSP3.31とHSP3.2、HSP3.3の違いについて。
+			ここでは、HSP3.32とHSP3.2、HSP3.3の違いについて。
 			そして、HSP2.61とHSP3全般の違いについて解説していきます。
 		</p>
 
 
-		<h2 id="DIFF32">HSP3.31の変更点について</h2>
+		<h2 id="DIFF32">HSP3.32の変更点について</h2>
 		<p>
-			HSP3.31は、HSP3.3のマイナーアップデートバージョンです。
-			HSP3.3をすでに使っているユーザーは、特に意識することなくHSP3.31をお使いいただけるはずです。
+			HSP3.32は、HSP3.3のマイナーアップデートバージョンです。
+			HSP3.3をすでに使っているユーザーは、特に意識することなくHSP3.32をお使いいただけるはずです。
 		</p>
 		<p>
 			HSP3の詳細な更新履歴については、<a href="history.txt">こちら(history.txt)</a>を参照してください。
 		</p>
 		<p>
-			HSP3.31でHSP3.2から追加変更された主要な項目は以下の通りです。
+			HSP3.32でHSP3.2から追加変更された主要な項目は以下の通りです。
 		</p>
 		<p>
 		<UL>
@@ -240,14 +240,25 @@
 		HSP3Dishの詳細と使用方法については、<a href="hsp3dish_prog.htm">マニュアル(hsp3dish_prog.htm)</a>を参照してください。
 		</p>
 
-		<h2 id="HSP331UPDATE">HSP3.31のアップデートについて</h2>
+		<h2 id="HSP332UPDATE">HSP3.32のアップデートについて</h2>
 		<p>
-		HSP3.31は、HSP3.3からのマイナーアップデートになります。
+		HSP3.32は、HSP3.3からのマイナーアップデートになります。
 		特に変更を意識することなく、HSP3.3と同様にお使い頂けます。
-		HSP3.31で変更された項目の詳細は、以下の通りです。
+		HSP3.32で変更された項目の詳細は、以下の通りです。
 		</p>
 
 		<dl>
+			<dt>
+			Windows8の対応について
+			</dt><br>
+			<dd>
+			<p>
+			HSP3.32では、Windows8上での動作を確認しています。
+			HSP3.31までのバージョンでは、Windows8(x64)上でウインドウを閉じる(終了する)際にランタイムエラーが表示されることがありました。
+			これは、動作自体に影響はなく、システム上で問題が起こるものではありませんが、Windows8上での動作を安定させるためにも最新版でのご使用を推奨します。
+			</p>
+			</dd>
+
 			<dt>
 			読み込み可能画像フォーマットの追加について
 			</dt><br>
@@ -271,7 +282,7 @@
 			アルファチャンネルを適用した状態で合成されることになります。
 			モード0(画面を初期化してロード)の場合は、通常通り白色の背景で
 			画面を初期化した上で、読み込みを行ないます。
-			HSP3.31では、新しくモード2(黒色で画面を初期化してロード)が追加
+			HSP3.32では、新しくモード2(黒色で画面を初期化してロード)が追加
 			されています。これは、黒色の背景で画面を初期化した上で、
 			読み込みを行ないます。これにより、透明部分が黒色になりgcopy命令等で
 			黒色を透明としてコピーする場合に有効です。
@@ -285,7 +296,7 @@
 			</dt><br>
 			<dd>
 			<p>
-			HSP3.31では、await命令の待ち時間精度を向上させています。
+			HSP3.32では、await命令の待ち時間精度を向上させています。
 			これにより、従来よりも一定で高精度な時間待ちを実現できます。
 			ただし、従来のスクリプトと待ち時間のタイミングが微妙に変わる
 			可能性がありますのでご注意ください。
@@ -318,11 +329,11 @@
 			</dt><br>
 			<dd>
 			<p>
-			HSP3.31では、自由に使用できる素材として、HSPTVフォルダ素材に
+			HSP3.32では、自由に使用できる素材として、HSPTVフォルダ素材に
 			サウンド(.wav、.mid)、画像(.jpg、.bmp、.png)を同梱しています。
 			これらの素材は、ユーザーがソフトを作成する際に自由に使用・配布
 			することができます。(著作権表記をする場合は、ドキュメントに
-			「HSP3.31付属のフリー素材データを使用」のようにお書き下さい。
+			「HSP3.32付属のフリー素材データを使用」のようにお書き下さい。
 			ただし、データを使用しても著作権表記を行なう義務はありません。)
 			<br><br>
 			スクリプトから素材データを呼び出す際には、dir_tvマクロを
