終了処理でWM_QUITメッセージが渡されない不具合を修正 ドキュメントの一部修正

--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -447,9 +447,11 @@
 	</p>
 	<li>データの保存について</li>
 	<p>
-	bsave、bload命令によってandroidストレージのデータファイル読み書きが可能です。
-	ファイル名が「/」で始まった場合は、フルパス指定となります。
-	androidストレージに保存する場合は、「/」を含めずファイル名(半角英文字)のみ指定するようにしてください。
+	bsave、bload命令によってアプリケーション固有のフォルダにデータファイルの読み書きが可能です。
+	「/」を含めずファイル名(半角英文字)のみ指定された場合は、アプリケーション固有のフォルダ
+(「/data/data/<自分のパッケージ名>/files」で示される場所)がアクセス対象となります。
+	このフォルダは通常は、自分以外のアプリケーションからはアクセスできない設定になっています。
+	(ファイル名が「/」で始まった場合は、フルパス指定となります。)
 	</p>
 	</ul>
 
