HSP3.4β1版に向けたドキュメントの更新、スクリプトエディタの仮修正

--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -434,6 +434,7 @@
 	<h2 id="KNOWNBUG">既知の不具合について</h2>
 	<p>
 	<li>#defcfuncによる複数パラメーターを持つユーザー定義関数の呼び出しで、パラメーター省略時に正しく実行が行なわれない不具合が報告されています
+	<li>#defcfuncによるユーザー定義関数の呼び出し内で、awaitやwait、stopなどタスクが停止状態になる命令を実行するとエラー(40)が発生しますので使用を避けてください
 	<li>split命令は現在正しく動作していません。getstr命令などにより代用下さい
 	<li>PNGデコーダーの違いによりWindows上で表示できる画像が、iOS,androidで表示できない場合があります
 	</p>
