ドキュメントとサンプルの更新

--- a/package/win32/doclib/hsp3dish_ios.htm
+++ b/package/win32/doclib/hsp3dish_ios.htm
@@ -33,7 +33,9 @@
 		<li><a href="#SENSOR">加速度センサーのサポートについて</a></li>
 		<li><a href="#DIALOG">dialog命令のサポートについて</a></li>
 		<li><a href="#RETINA">Retinaディスプレイ対応について</a></li>
+		<li><a href="#DEVCONTROL">デバイスコントロールについて(new)</a></li>
 		<li><a href="#RELEASE">AppStoreへの登録について</a></li>
+		<li><a href="#IAD">iAdの対応について(new)</a></li>
 		<li><a href="#NOTICE">iOS版の注意事項、制限</a></li>
 		<li><a href="#NEWVER">iOS版の更新予定</a></li>
 	</ol>
@@ -408,6 +410,45 @@
 	この設定により、Retinaディスプレイ搭載機種で正しく反映され、Retinaディスプレイでない機種では縮小サイズ(320×480)で表示されるようになります。
 	</p>
 
+	<h2 id="DEVCONTROL">デバイスコントロールについて</h2>
+	<p>
+	iOSデバイス固有の機能にdevcontrolなどの命令でアクセスすることが可能です。<br>
+	</p>
+	<pre>
+		devcontrol "コントロールコマンド",パラメーター1,パラメーター2,パラメーター3
+	</pre>
+	<p>
+	上のような書式で、デバイスコントロールを行ないます。
+	iOSデバイス上では、文字列として指定するコントロールコマンドは、以下を認識します。
+	(コントロールコマンドの文字列は、大文字小文字も含めて完全に一致する必要があります。)<br>
+	認識しないコントロールコマンドを記述した場合もエラーは発生しませんので注意してください。
+	</p>
+	<pre>
+	コントロールコマンド    内容
+	-------------------------------------------
+	vibrate			バイブ(振動)動作
+	sound			システム音再生(パラメーター1)
+	iAd			iAdの表示
+	</pre>
+	<p>
+	たとえば、
+	</p>
+	<pre>
+		devcontrol "vibrate"
+	</pre>
+	<p>
+	は、バイブ(振動)動作を行なうようデバイスに指示を出します。<br>
+	コントロールコマンドによっては、数値によるパラメーターを認識します。
+	</p>
+	<pre>
+		devcontrol "sound",1000
+	</pre>
+	<p>
+	は、組み込みのサウンド(サウンドID=1000)を再生します。
+	パラメーターの数値を変えることにより、様々な組み込みサウンドを再生可能です。
+	(サウンドIDは、1000～1017が指定できます。詳しくは、iOSのAudioServicesPlaySystemSound関数リファレンスを参照してください。)
+	</p>
+
 	<h2 id="RELEASE">AppStoreへの登録について</h2>
 	<p>
 	HSP3Dishを使用してアプリを作成した場合でも、通常のアプリ開発と同じ手順でAppStoreへの登録が可能です。<br>
@@ -433,6 +474,20 @@
 	Appleの公開しているドキュメントや、ネット上の資料などを参考にしながら、登録の方法を学んでいってください。<br>
 	既に、HSP3Dishによる作品が少しずつAppStoreにも登場してきています。
 	全世界のマーケットを対象に作品を公開することができますので、是非あなたもチャレンジしてみてください。
+	</p>
+
+	<h2 id="IAD">iAdの対応について(new)</h2>
+	<p>
+	HSP3Dish ver3.4β1版から、アプリ内に広告を表示するiAdのシステムに対応しています。<br>
+	iAdを有効にする場合は、
+	</p>
+	<pre>
+		devcontrol "iAd"
+	</pre>
+	<p>
+	の記述を追加してください。iAdが有効になった後は、画面下にiAdが配信する広告表示が行なわれます。<br>
+	iAdによる広告収益を得るためには、iTunes connect上で適切な設定を行なう必要があります。
+	詳しくは、<a href="https://developer.apple.com/jp/support/ios/iad-network.html" target="_blank">デベロッパーサポートのiAd項目</a>を参照してください。
 	</p>
 
 	<h2 id="NOTICE">iOS版の注意事項、制限</h2>
