--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -32,8 +32,9 @@
 		<li><a href="#DATAFILE">データファイルの準備</a></li>
 		<li><a href="#SYSINFO">システム情報の取得</a></li>
 		<li><a href="#EXECTASK">タスク(アクティビティ)呼び出し</a></li>
-		<li><a href="#SCALE">画面サイズのスケーリングについて(new)</a></li>
-		<li><a href="#RELEASE">リリースビルド(new)</a></li>
+		<li><a href="#SCALE">画面サイズのスケーリングについて</a></li>
+		<li><a href="#RELEASE">リリースビルド</a></li>
+		<li><a href="#DEVCONTROL">デバイスコントロールについて(new)</a></li>
 		<li><a href="#NOTICE">android版の注意事項、制限</a></li>
 		<li><a href="#NEWVER">android版の更新予定</a></li>
 	</ol>
@@ -312,6 +313,35 @@
 	カッコ内の数値が0以外の場合は補正がONになります。0の場合は補正がOFFになります。
 	</p>
 
+	<h2 id="DEVCONTROL">デバイスコントロールについて</h2>
+	<p>
+	Androidデバイス固有の機能にdevcontrolなどの命令でアクセスすることが可能です。<br>
+	</p>
+	<pre>
+		devcontrol "コントロールコマンド",パラメーター1,パラメーター2,パラメーター3
+	</pre>
+	<p>
+	上のような書式で、デバイスコントロールを行ないます。
+	Androidデバイス上では、文字列として指定するコントロールコマンドは、以下を認識します。
+	(コントロールコマンドの文字列は、大文字小文字も含めて完全に一致する必要があります。)<br>
+	認識しないコントロールコマンドを記述した場合もエラーは発生しませんので注意してください。
+	</p>
+	<pre>
+	コントロールコマンド    内容
+	-------------------------------------------
+	vibrate			バイブ(振動)動作(パラメーター1)
+	</pre>
+	<p>
+	たとえば、
+	</p>
+	<pre>
+		devcontrol "vibrate",400
+	</pre>
+	<p>
+	は、バイブ(振動)動作を行なうようデバイスに指示を出します。<br>
+	パラメーターの数値を変えることにより、振動の長さ(ミリ秒単位)を変えることができます。
+	</p>
+
 	<h2 id="RELEASE">リリースビルド</h2>
 	<p>
 	HSP3Dish Helperからリリースビルドを行なうと、署名入りのapkファイルを生成することができます。これにより、Google Play(Android マーケット)に作成したアプリを登録することが可能になります。
@@ -386,8 +416,10 @@
 	<ul>
 	<li>入力可能な情報</li>
 	<p>
-	タップした座標がmousex,mouseyに反映されます。
-	またstick命令により、クリック(タップ)のON/OFFを取得可能です。
+	タップした座標がmousex,mouseyに反映されるほか、stick命令により、クリック(タップ)のON/OFFを取得可能です。
+	また、mtlist、mtinfo命令により高度なタッチ情報(マルチタッチなど)を取得することができます。
+	複数ポイントのタッチ情報(マルチタッチ)は、デバイスがサポートしている場合のみ取得可能です。
+	Androidデバイスによっては、ハードウェアがマルチタッチをサポートしていない場合がありますので、注意してください。
 	</p>
 	<li>画像フォーマットについて</li>
 	<p>
@@ -460,12 +492,11 @@
 	以下の機能は今後、上から順に高い優先度で追加される予定です。
 	</p>
 	<ul>
+	<li>傾きセンサーの入力情報の取得</li>
+	<li>admobによる広告配信への対応</li>
 	<li>dialog命令によるダイアログ表示サポート</li>
 	<li>各種システム情報取得</li>
-	<li>サウンド再生時のボリュームコントロール</li>
 	<li>日本語フォントの描画サポート</li>
-	<li>傾きセンサーの入力情報の取得</li>
-	<li>マルチタッチ入力情報の取得</li>
 	<li>http接続、ブラウザの呼び出しサポート</li>
 	<li>OBAQプラグイン機能のサポート</li>
 	</ul>
