--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -28,7 +28,7 @@
 		<li><a href="#GFILTER">gfilter命令について</a></li>
 		<li><a href="#SYSREQ">setreq、getreq命令について</a></li>
 		<li><a href="#MTOUCH">マルチタッチ情報の取得について(new)</a></li>
-		<li><a href="SOUND">サウンド機能について(new)</a></li>
+		<li><a href="#SOUND">サウンド機能について(new)</a></li>
 		<li><a href="#SAMPLE">サンプルスクリプト</a></li>
 		<li><a href="#CMDLIST">HSP3Dishコマンドリスト</a></li>
 		<li><a href="#WINHRT">Windows上での実行ファイル作成</a></li>
@@ -376,7 +376,7 @@
 	通常の起動時は、画面のサイズは320x480に固定されています。
 	これは、iPhone(3G)に合わせたサイズですが、起動設定ファイルを
 	用意することにより、画面サイズを変更することができます。
-	(HSP3Dishは、画面サイズは一定でありscreen,width命令で変更できません)
+	(HSP3Dishは、画面サイズは起動時に決定され、screen,width命令での変更はできません)
 	</p>
 	<p>
 	起動設定ファイルは、「hsp3dish.ini」というファイル名でスクリプトと
