ドキュメントの修正 llmod3/winver.hspでエラーが発生する不具合を修正

--- a/package/win32/doclib/hsp3dish_ios.htm
+++ b/package/win32/doclib/hsp3dish_ios.htm
@@ -211,12 +211,16 @@
 	    self.window.rootViewController = hsp;
 	    [view release];
 	</pre>
+
 	<p>
-	以下のようなコードになっているか確認してみてください。
+	iOSフォルダに含まれているAppDelegate.mには、標準的な設定(320x480、60フレーム)による初期化コードが書かれています。
+	冒頭が「//」で始まる行はコメントとして認識され、書かれた内容は無効となります。
+	必要に応じて、「//」を削除することで設定を有効にすることができます。
 	</p>
-	<img src="hsp3dish/s_code.jpg"><br>
+	<br>
+
 	<p>
-	HSPランタイムを組み込む追加コードにより、いくつかの設定を行なうことができます。
+	AppDelegate.m内の追加コードにより、いくつかの設定を行なうことができます。
 	</p>
 	<pre>
 	    HspView* view=[[HspView alloc] initWithFrame:CGRectMake(0,0,320,480)];
@@ -319,8 +323,6 @@
 	<p>
 	スケーリングの設定は、起動時に行なわれます。スクリプト実行中に変更することはできません。
 	</p>
-
-	<br>
 
 	<p>
 	タスク切替時には、HSPの実行を停止し処理を軽減させる設定になっています。
