--- a/package/win32/doclib/hsp3dish_prog.htm
+++ b/package/win32/doclib/hsp3dish_prog.htm
@@ -437,6 +437,7 @@
 	<li>#defcfuncによるユーザー定義関数の呼び出し内で、awaitやwait、stopなどタスクが停止状態になる命令を実行するとエラー(40)が発生しますので使用を避けてください
 	<li>split命令は現在正しく動作していません。getstr命令などにより代用下さい
 	<li>PNGデコーダーの違いによりWindows上で表示できる画像が、iOS,androidで表示できない場合があります
+	<li>#defcfunc、#deffunc命令によるユーザー定義呼び出し先でgosub命令を使用した際に、呼び出し先のサブルーチンで引数にアクセスできない不具合が報告されています
 	</p>
 
 	<h2 id="LICENCE">著作権とライセンス</h2>
