hsptvappのパッケージを追加

--- a/package/win32/index.htm
+++ b/package/win32/index.htm
@@ -78,6 +78,7 @@
 				<ul>
 					<li><a href="doclib/aht.txt">AHT（Additional HSP Template &amp; Tools）マニュアル（中上級者向け）（aht.txt）</a></li>
 					<li><a href="doclib/hsptv_api.txt">HSPTV対応ソフト作成マニュアル（中上級者向け）（hsptv_api.txt）</a></li>
+					<li><a href="doclib/hsptvapp.txt">HSPTV!ランキング対応ソフト作成マニュアル（中上級者向け）（hsptvapp.txt）</a></li>
 					<li><a href="doclib/HSP Document Library/HS_BIBLE.txt">HSP HELP Browser用 hsファイルの標準仕様（HS_BIBLE.txt）</a></li>
 					<li><a href="hspsdk/readme.txt">HSPSDK(HSP開発キット)マニュアル（上級者向け）（readme.txt）</a></li>
 					<li><a href="hspsdk/hspdll.txt">HSPプラグイン開発マニュアル（上級者向け）（hspdll.txt）</a></li>
