ドキュメントの修正 HGIMG4に関するファイルの追加

--- a/package/win32/doclib/hsp3dish_ndk.htm
+++ b/package/win32/doclib/hsp3dish_ndk.htm
@@ -43,7 +43,7 @@
 	<p>
 	android版 HSP3Dishは、android OS搭載機種(スマートフォン、タブレット等)上で動作するHSP3Dishのランタイムです。
 	Windows版 HSP3Dishがサポートする機能をandroid OS上で再現することが可能です。
-	(android版 HSP3Dishは、Windows版のスクリプトを実行させることを目的としており、HSP3開発システムそのものをiOS上で再現するものではありません。)
+	(android版 HSP3Dishは、Windows版のスクリプトを実行させることを目的としており、HSP3開発システムそのものをandroid上で再現するものではありません。)
 	<br>
 	このマニュアルでは、android版の利用方法、注意点などを説明していきます。
 	<br>
